--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
     <head>
-        <title>GSL</title>
+        <title>GSL-Tracker</title>
         <link rel="stylesheet" href="main.css" type="text/css" />
+        <link rel="shortcut icon" href="images/gsl.ico">
         <script type="text/javascript" src="gsl-tracker.js"></script>
         <script type="text/javascript">
             window.onload = init;
