No idea, just found changes in directory

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
-        <title>GSL</title>
+        <title>GSL Tracker</title>
+        <link rel="shortcut icon" href="gsl.ico" />
         <link rel="stylesheet" href="main.css" type="text/css" />
         <script type="text/javascript" src="gsl-tracker.js"></script>
         <script type="text/javascript">
